--- a/src/app/components/detail/detail.less
+++ b/src/app/components/detail/detail.less
@@ -4,9 +4,20 @@
 }
 
 .detail-youtube {
-   display: block;
+  display: block;
 }
 
 .detail-btn {
   min-width: 225px;
+}
+
+.videogular-container vg-overlay-play, [videogular] vg-overlay-play {
+  width: 0;
+  height: 100%;
+  position: absolute;
+  z-index: 1000;
+}
+
+.overlayPlayContainer {
+  left: -50px;
 }
