--- a/src/app/index.less
+++ b/src/app/index.less
@@ -17,6 +17,13 @@
     src: url(/assets/fonts/clip.regular.ttf);
 }
 
+@font-face {
+  font-family: 'videogular' !important;
+  src: url("/assets/fonts/videogular.eot") !important;
+  src: url("/assets/fonts/videogular.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/videogular.woff") format("woff"), url("/assets/fonts/videogular.ttf") format("truetype"), url("/assets/fonts/videogular.svg#videogular") format("svg") !important;
+  font-weight: normal;
+  font-style: normal; }
+
 // Define Colour variables.
 @orange: #fc7c00;
 @yellow: #ffff36;
