--- a/src/app/index.less
+++ b/src/app/index.less
@@ -10,7 +10,7 @@
  *  The list of variables are listed here bower_components/bootstrap/less/variables.less
  */
 @navbar-inverse-link-color: #5AADBB;
-@icon-font-path: '../../../bower_components/bootstrap/fonts/';
+@icon-font-path: '/fonts/';
 
 .browsehappy {
   margin: 0.2em 0;
