first cut of styling

--- a/src/app/components/detail/detail.html
+++ b/src/app/components/detail/detail.html
@@ -1,7 +1,6 @@
 
-<div>
-
-<ng-youtube-embed
+<div id="detail-youtube">
+  <ng-youtube-embed
     url="detail.selectedSong.lyricVideo"
     autoplay="false"
     color="white"
@@ -9,29 +8,31 @@
     fs="false"
     width="100%"
     end="20">
-</ng-youtube-embed>
-
+  </ng-youtube-embed>
 </div>
 
-<h1>{{detail.selectedSong.artist}} - {{detail.selectedSong.title}}</h1>
 
-  <div class="thumbnail text-center col-sm-4">
+<div>
+  <div class="text-center col-sm-offset-4 col-sm-4">
     <h2>
       <i class="glyphicon glyphicon-music"></i>
       Music Video
     </h2>
   </div>
-  <div class="thumbnail text-center col-sm-4">
+  <div class="text-center col-sm-offset-4 col-sm-4 selectedVideo">
     <h2>
       <i class="glyphicon glyphicon-music"></i>
       Lyric Video
     </h2>
   </div>
-  <div class="thumbnail text-center col-sm-4">
+  <div class="text-center col-sm-offset-4 col-sm-4">
     <h2>
       <i class="glyphicon glyphicon-save"></i>
       Download Tasks
     </h2>
   </div>
+</div>
 
-{{ detail.selectedSong | json }}
+<div class="song-text col-sm-12">
+  <h1>{{detail.selectedSong.artist}} - {{detail.selectedSong.title}}</h1>
+</div>
