--- a/src/app/components/menu/menu.less
+++ b/src/app/components/menu/menu.less
@@ -1,4 +1,11 @@
 
+#menu-carousel {
+    margin-top: 15%;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 40px;
+}
+
 .selectedGenre {
-  background-color: lightgray;
+  background-color: orange;
 }
