--- a/src/app/index.less
+++ b/src/app/index.less
@@ -12,6 +12,24 @@
 @navbar-inverse-link-color: #5AADBB;
 @icon-font-path: '/fonts/';
 
+html, body{
+  height: 100%;
+}
+
+#wrap {
+  min-height: 100%;
+  margin: 0 auto -40px;
+  height: auto !important;
+}
+
+body {
+    background-color: black;
+    background-image: url("/assets/images/jukebox-background.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: center top;
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -26,6 +44,13 @@
     width: 50px;
   }
 }
+
+footer {
+  text-align: center;
+  color: white;
+}
+
+
 
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
