--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,16 +1,13 @@
-<nav class="navbar navbar-static-top navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-        <span class="glyphicon glyphicon-home"></span> Jukebox comprehension
+<nav class="col-sm-12">
+  <div class="links right-links pull-right">
+      <span class="neon-font" ng-click="nc.openLoginForm()">
+        <h2 class="neon-font">Login&nbsp;<i class="pull-right glyphicon glyphicon-user"></i></h2>
+      </span>
+  </div>
+  <div class="links left-links">
+      <a href="/">
+        <h2 class="neon-font"><i class="glyphicon glyphicon-home"></i> Home</h2>
       </a>
-    </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
-      <ul class="nav navbar-nav">
-        <li class="active"><a ng-href="/">Home</a></li>
-        <li><a ng-href="/contact">Contact us</a></li>
-      </ul>
-    </div>
+    </h2>
   </div>
 </nav>
