--- a/src/app/components/detail/detail.less
+++ b/src/app/components/detail/detail.less
@@ -2,14 +2,25 @@
     margin-top: 16%;
     margin-left: 30%;
     margin-right: 30%;
-    margin-bottom: 10px;
+}
+
+.button-img {
+  cursor: pointer;
+  background: url("/assets/images/jukebox-card-long.png") no-repeat top center;
+}
+
+.button-img h2 {
+  margin-top:35px;
+  margin-bottom: 67px;
+  padding-top: 12px;
 }
 
 .selectedVideo {
-  background-color: orange;
+  color: red;
 }
 
 .song-text {
   color: white;
   text-align: center;
+  margin-bottom: 20px;
 }
