--- a/src/app/components/menu/menu.html
+++ b/src/app/components/menu/menu.html
@@ -1,30 +1,27 @@
-<div class="row">
-  <div class="col-sm-12">
-
-    <div id="menu-carousel" >
-      <uib-carousel active="0" no-wrap="false" interval="0">
-        <uib-slide ng-repeat="song in menu.selectedGenre track by song.id" >
-          <a ng-href="/songs/{{song.genre}}/{{song.id}}">
-          <img class="img-circle" ng-src="{{song.image}}" style="margin:auto;" >
-          <div class="carousel-caption">
-            <p>{{song.artist}}</p>
-            <p>{{song.title}}</p>
-          </div>
-        </a>
-        </uib-slide>
-      </uib-carousel>
-    </div>
-
-      <div ng-repeat="genreKey in menu.genreKeys" class="col-sm-12">
-          <div class="text-center col-sm-4 col-sm-offset-4"
-               ng-class="menu.selectedGenre[0].genre == genreKey ? 'selectedGenre' : ''"
-               ng-click="menu.setGenre(genreKey)">
-            <h2>
-              <i class="glyphicon glyphicon-music"></i>
-              {{genreKey | uppercase}}
-            </h2>
-          </div>
-      </div>
-
+<div class="col-sm-12">
+  <div id="menu-carousel">
+    <uib-carousel active="0" no-wrap="false" interval="0">
+      <uib-slide ng-repeat="song in menu.selectedGenre track by song.id" >
+        <a ng-href="/songs/{{song.genre}}/{{song.id}}">
+        <img class="img-circle" ng-src="{{song.image}}" style="margin:auto;" >
+        <div class="carousel-caption">
+          <p>{{song.artist}}</p>
+          <p>{{song.title}}</p>
+        </div>
+      </a>
+      </uib-slide>
+    </uib-carousel>
+  </div>
 </div>
+
+<div class="col-sm-12">
+  <div class="col-sm-offset-3 col-sm-6">
+    <div ng-repeat="genreKey in menu.genreKeys">
+        <div class="text-center col-sm-6 genre-key"
+             ng-class="menu.selectedGenre[0].genre == genreKey ? 'selectedGenre' : ''"
+             ng-click="menu.setGenre(genreKey)">
+          <h2>{{genreKey | uppercase}}</h2>
+        </div>
+    </div>
+  </div>
 </div>
