--- a/src/app/components/menu/menu.less
+++ b/src/app/components/menu/menu.less
@@ -1,11 +1,21 @@
-
 #menu-carousel {
-    margin-top: 15%;
+    margin-top: 12%;
     margin-left: 20%;
     margin-right: 20%;
     margin-bottom: 40px;
 }
 
+.genre-key {
+  cursor: pointer;
+  background: url("/assets/images/jukebox-card.png") no-repeat top center;
+}
+
+.genre-key h2 {
+  margin-top:35px;
+  margin-bottom: 67px;
+  padding-top: 12px;
+}
+
 .selectedGenre {
-  background-color: orange;
+  color: red;
 }
