--- a/src/app/components/navbar/navbar.less
+++ b/src/app/components/navbar/navbar.less
@@ -1,7 +1,7 @@
-.navbar-text {
-  color: orange;
+.header p {
+  margin-top: 20px;
 }
 
-.left-links {
-  margin-left: 15px;
+.header a {
+   cursor: pointer;
 }
