--- a/src/app/components/menu/menu.less
+++ b/src/app/components/menu/menu.less
@@ -1,21 +1,14 @@
-#menu-carousel {
-    margin-top: 12%;
-    margin-left: 20%;
-    margin-right: 20%;
-    margin-bottom: 40px;
+.img-container {
+   width: 100%;
+   display: block;
+}
+
+.genre-container {
+  position: absolute;
+  bottom: 40px;
+  width: 100%;
 }
 
 .genre-key {
   cursor: pointer;
-  background: url("/assets/images/jukebox-card.png") no-repeat top center;
-}
-
-.genre-key h2 {
-  margin-top:35px;
-  margin-bottom: 67px;
-  padding-top: 12px;
-}
-
-.selectedGenre {
-  color: red;
 }
