--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,13 +1,18 @@
-<nav class="col-sm-12">
-  <div class="links right-links pull-right">
-      <span class="neon-font" ng-click="nc.openLoginForm()">
-        <h2 class="neon-font">Login&nbsp;<i class="pull-right glyphicon glyphicon-user"></i></h2>
-      </span>
-  </div>
-  <div class="links left-links">
+<nav class="col-sm-12 header" ng-class="nc.colour">
+  <div class="col-sm-1">
       <a href="/">
-        <h2 class="neon-font"><i class="glyphicon glyphicon-home"></i> Home</h2>
+        <p class="neon-font" ng-class="nc.colour"><i class="glyphicon glyphicon-home"></i>&nbsp;Home</p>
       </a>
     </h2>
+  </div>
+
+  <div class="col-sm-10 text-center">
+    <h2 class="neon-font">Jukebox Comprehension</h2>
+  </div>
+
+  <div class="col-sm-1">
+      <a ng-click="nc.openLoginForm()">
+        <p class="neon-font" ng-class="nc.colour">Login&nbsp;<i class="glyphicon glyphicon-user"></i></p>
+      </a>
   </div>
 </nav>
