--- a/src/app/index.less
+++ b/src/app/index.less
@@ -21,6 +21,7 @@
 @blue: lightblue;
 @red: red;
 @pink: pink;
+@green: lightgreen;
 
 html, body{
   height: 100%;
@@ -58,6 +59,11 @@ a:link, a:visited, a:hover, a:active {
 .blue {
   color: @blue !important;
   border-color: @blue !important;
+}
+
+.green {
+  color: @green !important;
+  border-color: @green !important;
 }
 
 .browsehappy {
