--- a/src/app/components/detail/detail.less
+++ b/src/app/components/detail/detail.less
@@ -1,26 +1,12 @@
-#detail-youtube {
-    margin-top: 16%;
-    margin-left: 30%;
-    margin-right: 30%;
-}
-
-.button-img {
-  cursor: pointer;
-  background: url("/assets/images/jukebox-card-long.png") no-repeat top center;
-}
-
-.button-img h2 {
-  margin-top:35px;
-  margin-bottom: 67px;
-  padding-top: 12px;
-}
-
-.selectedVideo {
-  color: red;
-}
-
 .song-text {
-  color: white;
   text-align: center;
   margin-bottom: 20px;
+}
+
+.detail-youtube {
+   display: block;
+}
+
+.spacer {
+  margin-top: 20px;
 }
