--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3 class="modal-title neon-font">Jukebox Comprehension Login</h3>
+    <h3 class="modal-title neon-font orange">Jukebox Comprehension Login</h3>
 </div>
 <div class="modal-body">
   <form>
@@ -19,6 +19,6 @@
   </form>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-warning" type="button" ng-click="lc.cancel()">Cancel <i class="glyphicon glyphicon-remove"></i></button>
-    <button class="btn btn-success" type="button" ng-click="lc.login()">Login <i class="glyphicon glyphicon-ok"></i></button>
+    <button class="btn btn-primary btn-lg outline neon-font red" type="button" ng-click="lc.cancel()">Cancel <i class="glyphicon glyphicon-remove"></i></button>
+    <button class="btn btn-primary btn-lg outline neon-font green" type="button" ng-click="lc.login()">Login <i class="glyphicon glyphicon-ok"></i></button>
 </div>
