add modal for register/price

--- a/src/app/components/detail/detail.html
+++ b/src/app/components/detail/detail.html
@@ -20,7 +20,8 @@
   </div>
   <div class="col-sm-2 text-center spacer">
     <a class="btn btn-primary btn-lg outline neon-font"
-        ng-class="detail.selectedSong.colour">
+        ng-class="detail.selectedSong.colour"
+        ng-click="detail.openRegister()">
         <i class="glyphicon glyphicon-cloud-download"></i>
         Download Tasks
     </a>
