--- a/src/app/components/navbar/navbar.less
+++ b/src/app/components/navbar/navbar.less
@@ -5,3 +5,12 @@
 .header a {
    cursor: pointer;
 }
+
+#simple-dropdown {
+  font-size: 20px;
+}
+
+.dropdown-menu {
+  background-color: @background-colour !important;
+  font-size: 16pt;
+}
