--- a/src/app/components/menu/menu.less
+++ b/src/app/components/menu/menu.less
@@ -4,11 +4,21 @@
 }
 
 .genre-container {
-  position: absolute;
-  bottom: 40px;
-  width: 100%;
+  text-align: center;
+}
+
+.genre-button {
+  padding-top: 40px;
 }
 
 .genre-key {
   cursor: pointer;
+}
+
+.carousel-control .glyphicon-chevron-left,
+.carousel-control .glyphicon-chevron-right,
+.carousel-control .icon-next,
+.carousel-control .icon-prev {
+  font-size: 100px !important;
+  width: inherit;
 }
