--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,25 +1,15 @@
 <nav class="col-sm-12 header" ng-class="nc.colour">
   <div class="col-sm-1">
-    <span uib-dropdown on-toggle="toggled(open)">
-      <a href id="simple-dropdown" uib-dropdown-toggle ng-class="nc.colour">
-        <p><i class="glyphicon glyphicon-menu-hamburger"></i></p>
-      </a>
-      <ul class="dropdown-menu" ng-class="nc.colour" uib-dropdown-menu aria-labelledby="simple-dropdown">
-        <li><a href="/" class="neon-font" ng-class="nc.colour"><i class="glyphicon glyphicon-home"></i>&nbsp;Home</a></li>
-        <li><a href="#" class="neon-font" ng-class="nc.colour"><i class="glyphicon glyphicon-gbp"></i>&nbsp;Pricing</a></li>
-        <li><a href="#" class="neon-font" ng-class="nc.colour"><i class="glyphicon glyphicon-tag"></i>&nbsp;About us</a></li>
-        <li><a href="#" class="neon-font" ng-class="nc.colour"><i class="glyphicon glyphicon-folder-open"></i>&nbsp;Terms &amp; Conditions</a></li>
-      </ul>
-    </span>
+    <a href="/"><h2 ng-class="nc.colour"><i class="glyphicon glyphicon-home"></i></h2></a>
   </div>
 
   <div class="col-sm-10 text-center">
-    <h2 class="neon-font">Jukebox Comprehension</h2>
+    <h1 class="neon-font">Jukebox Comprehension</h1>
   </div>
 
   <div class="col-sm-1">
       <a ng-click="nc.openLoginForm()">
-        <p class="neon-font" ng-class="nc.colour">Login&nbsp;<i class="glyphicon glyphicon-user"></i></p>
+        <h2 ng-class="nc.colour"><i class="glyphicon glyphicon-user"></i></h2>
       </a>
   </div>
 </nav>
