--- a/src/app/index.less
+++ b/src/app/index.less
@@ -11,10 +11,6 @@
  */
 @navbar-inverse-link-color: #5AADBB;
 @icon-font-path: '/fonts/';
-// @font-face {
-//     font-family: Neon;
-//     src: url(/assets/fonts/neon/NEON.TTF);
-// }
 
 @font-face {
     font-family: Clip;
@@ -28,6 +24,7 @@
 @red: red;
 @pink: pink;
 @green: lightgreen;
+
 @background-colour: #2F4F4E;
 
 html, body{
@@ -36,8 +33,8 @@ html, body{
 
 body {
   background-color: @background-colour;
-  // background-image: url("/assets/images/background.jpg");
-  // background-size: 100% 100%;
+  background-image: url("/assets/images/blue-bk.jpg");
+  background-size: 100% 100%;
   background-repeat: no-repeat;
 }
 
@@ -73,6 +70,16 @@ a:link, a:visited, a:hover, a:active {
   border-color: @green !important;
 }
 
+.red {
+  color: @red !important;
+  border-color: @red !important;
+}
+
+.yellow {
+  color: @yellow !important;
+  border-color: @yellow !important;
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -106,25 +113,29 @@ a:link, a:visited, a:hover, a:active {
 }
 
 footer {
-  text-align: center;
   color: white;
   position: absolute;
   bottom: 0;
   width: 100%;
 }
 
+.divider {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .border-glow {
   padding: 10px;
   margin: 20px;
-  border: 2px solid orange;
+  border: 3px solid orange;
   outline:none;
   border-radius: 4px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   /* create a BIG glow */
-  box-shadow: 0px 0px 14px;
-  -moz-box-shadow: 0px 0px 14px;
-  -webkit-box-shadow: 0px 0px 14px;
+  box-shadow: 0px 0px 48px;
+  -moz-box-shadow: 0px 0px 48px;
+  -webkit-box-shadow: 0px 0px 48px;
   color: orange;
 }
 
@@ -133,9 +144,6 @@ footer {
 **************************/
 .btn {
   min-width: 9em;
-}
-
-.btn {
   display: inline-block;
   padding: 6px 12px;
   margin-bottom: 0;
@@ -154,12 +162,27 @@ footer {
   border: 1px solid transparent;
   border-radius: 4px;
   padding: 20px 16px;
+  padding: 14px 24px;
+  border: 0 none;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  outline:none;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  /* create a BIG glow */
+  box-shadow: 0px 0px 32px;
+  -moz-box-shadow: 0px 0px 32px;
+  -webkit-box-shadow: 0px 0px 32px;
+  color: orange;
+  background-image: url("/assets/images/button-bg.jpg");
 }
 
 .btn-lg {
   font-size: 18px;
   line-height: 1.33;
-  border-radius: 6px;
+  border-radius: 8px;
 }
 
 .btn.outline {
@@ -169,23 +192,6 @@ footer {
 
 .btn-primary.outline {
     border: 2px solid orange;
-    color: orange;
-}
-
-.btn {
-    padding: 14px 24px;
-    border: 0 none;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    outline:none;
-    border-radius: 4px;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    /* create a BIG glow */
-    box-shadow: 0px 0px 14px;
-    -moz-box-shadow: 0px 0px 14px;
-    -webkit-box-shadow: 0px 0px 14px;
     color: orange;
 }
 
