--- a/src/app/index.less
+++ b/src/app/index.less
@@ -18,12 +18,12 @@
 }
 
 // Define Colour variables.
-@orange: orange;
-@yellow: yellow;
-@blue: lightblue;
-@red: red;
-@pink: pink;
-@green: lightgreen;
+@orange: #fc7c00;
+@yellow: #ffff36;
+@blue: #40ffed;
+@red: #FF0015;
+@pink: #ff0dba;
+@green: #00FF00;
 
 @background-colour: #2F4F4E;
 
@@ -44,6 +44,10 @@ h1 {
 
 h2 {
   font-size: 30px;
+}
+
+a {
+  color: white;
 }
 
 a:link, a:visited, a:hover, a:active {
@@ -117,6 +121,7 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+  font-size: 8pt;
 }
 
 .divider {
@@ -172,9 +177,9 @@ footer {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   /* create a BIG glow */
-  box-shadow: 0px 0px 32px;
-  -moz-box-shadow: 0px 0px 32px;
-  -webkit-box-shadow: 0px 0px 32px;
+  box-shadow: 0px 0px 522px;
+  -moz-box-shadow: 0px 0px 52px;
+  -webkit-box-shadow: 0px 0px 52px;
   color: orange;
   background-image: url("/assets/images/button-bg.jpg");
 }
