--- a/src/app/components/login/login.less
+++ b/src/app/components/login/login.less
@@ -1,6 +1,6 @@
 .modal-content {
   background-color: @background-colour;
-  border: 1px solid orange;
+  border: 1px solid @orange;
 }
 
 .modal-footer, .modal-header  {
@@ -15,4 +15,10 @@
   border-style: solid;
   border-color: orange;
   color: white;
+}
+
+.text-danger {
+  font-size: 16pt;
+  color: @red;
+  padding-bottom: 15px;
 }
