add all new pages, just need to resolve download

--- a/src/app/components/detail/detail.html
+++ b/src/app/components/detail/detail.html
@@ -30,8 +30,7 @@
     <a class="btn btn-primary btn-lg outline neon-font"
         ng-class="detail.selectedSong.colour"
         target="_blank"
-        ng-href="{{detail.fileUrl}}">
-        <i class="glyphicon glyphicon-cloud-download"></i>
+        href="https://firebasestorage.googleapis.com/v0/b/jukebox-temp.appspot.com/o/tasks.pdf?alt=media&token=84a14a0c-cad4-497e-962b-1334225e2939">        <i class="glyphicon glyphicon-cloud-download"></i>
         Download Tasks
     </a>
   </div>
