--- a/src/app/components/register/register.html
+++ b/src/app/components/register/register.html
@@ -1,9 +1,14 @@
 <div class="modal-header">
-    <h3 class="modal-title neon-font orange">Jukebox Comprehension</h3>
+    <h3 class="modal-title neon-font orange">Annual Membership</h3>
 </div>
 <div class="modal-body">
-  <p>Some Cost info...</p>
-</div>
-<div class="modal-footer">
-    <button class="btn btn-primary btn-lg outline neon-font red" type="button" ng-click="rc.close()">Close <i class="glyphicon glyphicon-remove"></i></button>
+  <h3>Annual Membership Fee:</h3>
+  <p>&pound;48 per school for full access to the site and material for the whole acedemic year (Sept - Aug)</p>
+
+  <p>*All new subscriptions are calculated from the day of registration to August 31st. 
+    Subsequent Memberships are then billed annually from September 1st.</p>
+
+  <p>By signing up you agree to the Reading Explorers *Terms &amp; Conditions.</p>
+
+  <button class="btn btn-primary btn-lg outline neon-font" type="button" ng-click="rc.close()">Close <i class="glyphicon glyphicon-remove"></i></button>
 </div>
