--- a/src/app/components/register/register.less
+++ b/src/app/components/register/register.less
@@ -1,18 +1,1 @@
-.modal-content {
-  background-color: @background-colour;
-  border: 1px solid orange;
-}
-
-.modal-footer, .modal-header  {
-  border: none;
-}
-
-.modal-body {
-  border-top: 1px;
-  border-bottom: 1px;
-  border-left: 0px;
-  border-right: 0px;
-  border-style: solid;
-  border-color: orange;
-  color: white;
-}
+// define custom style here...
