--- a/src/app/components/menu/menu.html
+++ b/src/app/components/menu/menu.html
@@ -1,18 +1,20 @@
 
 <div class="col-sm-3 genre-container">
-    <div ng-repeat="genreKey in menu.genreKeys" ng-switch on="$index % 2">
-      <div class="genre-button" ng-switch-when="0">
-        <a class="btn btn-primary btn-lg outline neon-font"
-            ng-class="menu.genreColourByKey(genreKey)"
-            ng-click="menu.setGenre(genreKey)">
-          <span class="glyphicon glyphicon-music"></span> {{genreKey}}
-        </a>
-      </div>
+    <div>
+      <p class="text-intro" ng-class="menu.genreColour">Welcome to Jukebox Comprehension, where music and songs help you to developing
+      core comprehension skills in a fun and entertaining way.</p>
     </div>
+    <div>
+      <p class="text-intro" ng-class="menu.genreColour">Designed for use in the modern classroom, and linked closely to the requirements
+      of the new National Curriculum, this jukebox holds a wide range of music and
+      activities that will further the reading development of each and every child,
+      supporting them as they journey towards becoming a confident and able user of the English language. </p>
+    </div>
+
 </div>
 
 <div class="col-sm-6">
-  <div class="border-glow" ng-class="menu.genreColour">
+    <div class="border-glow" ng-class="menu.genreColour">
     <uib-carousel active="0" no-wrap="false" interval="0">
       <uib-slide ng-repeat="song in menu.selectedGenre track by song.id" >
         <a ng-href="/songs/{{song.genre}}/{{song.id}}">
@@ -28,6 +30,15 @@
 </div>
 
 <div class="col-sm-3 genre-container">
+  <div ng-repeat="genreKey in menu.genreKeys" ng-switch on="$index % 2">
+    <div class="genre-button" ng-switch-when="0">
+      <a class="btn btn-primary btn-lg outline neon-font"
+          ng-class="menu.genreColourByKey(genreKey)"
+          ng-click="menu.setGenre(genreKey)">
+        <span class="glyphicon glyphicon-music"></span> {{genreKey}}
+      </a>
+    </div>
+  </div>
   <div ng-repeat="genreKey in menu.genreKeys" ng-switch on="$index % 2">
     <div class="genre-button" ng-switch-when="1">
       <a class="btn btn-primary btn-lg outline neon-font"
