--- a/src/app/index.less
+++ b/src/app/index.less
@@ -48,6 +48,7 @@ h2 {
 
 a {
   color: white;
+  cursor: pointer;
 }
 
 a:link, a:visited, a:hover, a:active {
@@ -203,6 +204,33 @@ footer {
 .btn:focus, .btn:active:focus, .btn.active:focus {
     outline: 0 none;
 }
+
+// Modal Styling
+.modal-content {
+  background-color: @background-colour;
+  border: 1px solid @orange;
+}
+
+.modal-footer, .modal-header  {
+  border: none;
+}
+
+.modal-body {
+  border-top: 1px;
+  border-bottom: 1px;
+  border-left: 0px;
+  border-right: 0px;
+  border-style: solid;
+  border-color: @orange;
+  color: white;
+}
+
+.text-danger {
+  font-size: 16pt;
+  color: @red;
+  padding-bottom: 15px;
+}
+
 
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
